[AOD-160] Fix columns overflowing

--- a/app/components/Columns/Columns.scss
+++ b/app/components/Columns/Columns.scss
@@ -5,8 +5,6 @@
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  margin-left: -1rem;
-  margin-right: -1rem;
 
   &--flex-grow > .Column {
     flex-grow: 1;
@@ -32,14 +30,12 @@
 
 @each $size, $margin in $sizes-margin {
   .Columns--gutter-#{$size} {
-    margin-bottom: 1rem;
-    margin-left: -$margin;
-    margin-right: -$margin;
-    margin-top: 1rem;
+    margin-left: -$margin / 2;
+    margin-right: -$margin / 2;
 
     & > .Column {
-      margin-left: $margin;
-      margin-right: $margin;
+      margin-left: $margin / 2;
+      margin-right: $margin / 2;
     }
   }
 }
